--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-vertical-timeline-component": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
