--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-burger-menu": "^2.7.1",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-vertical-timeline-component": "^3.0.2"
