--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-apexcharts": "^1.3.7",
     "react-burger-menu": "^2.7.1",
+    "react-card-flip": "^1.0.11",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-easy-bar-chart": "0.0.2",
