--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-easy-bar-chart": "0.0.2",
     "react-gantt": "^2.1.8",
     "react-google-charts": "^3.0.15",
+    "react-hamburger-menu": "^1.2.1",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
