--- a/package.json
+++ b/package.json
@@ -5,27 +5,20 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
-    "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "apexcharts": "^3.20.0",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
-    "react-apexcharts": "^1.3.7",
-    "react-burger-menu": "^2.7.1",
     "react-card-flip": "^1.0.11",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
-    "react-easy-bar-chart": "0.0.2",
-    "react-gantt": "^2.1.8",
-    "react-google-charts": "^3.0.15",
-    "react-hamburger-menu": "^1.2.1",
     "react-modal": "^3.11.2",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "react-vertical-timeline-component": "^3.0.2"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,8 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "image-webpack-loader": "^6.0.0"
   }
 }
