working on project page

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-donut": "^1.0.4",
+    "react-minimal-pie-chart": "^8.0.1",
     "react-modal": "^3.11.2",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.2.0",
