--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-minimal-pie-chart": "^8.0.1",
     "react-modal": "^3.11.2",
     "react-moment": "^0.9.7",
+    "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-slideshow-image": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
