--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-announcement": "^1.1.3",
     "react-card-flip": "^1.0.11",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
